--- a/modern-portfolio-theory-and-investment-analysis/week-7-the-correlation0-structure-of-secruity-returns-SIM/question_one_analysis.Rmd
+++ b/modern-portfolio-theory-and-investment-analysis/week-7-the-correlation0-structure-of-secruity-returns-SIM/question_one_analysis.Rmd
@@ -263,4 +263,21 @@ a_c
 \end{aligned}
 $$
 
-Now suppose suppose we have $1500 to invest and we decided 
+Now suppose suppose we have $1500 to invest and we decided to invest into each $500. What would be our expected return?
+
+Using the Single Index Model we would calculate
+$$
+\begin{align*}
+\mathbb{E}[R_p] &= \sum_{i=a,b,c} \frac{1}{3} \mathbb{E}[R_i] \\
+&= \frac{1}{3} \times 2.9359 + \frac{1}{3} \times 6.1949 + \frac{1}{3} \times 5.409167 \\
+&= \frac{1}{3} (2.9359 + 6.1949 + 5.409167) \\
+&= 4.84665
+\end{align*}
+
+$$
+Now, given our investment 
+
+$$
+(\text{investment amount}) * \mathbb{E}[R_p] = 15000 * 4.84665 = 17269.98
+$$
+
